--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     src: url(fonte/Inter-SemiBold.ttf);
 }
 body{
-    background-color: rgba(196, 193, 189, 0.466);
+    background-color: rgba(138, 168, 124, 0.445);
 }
 /********container cabeçalho********/
 .cabeçalho__container{
@@ -38,11 +38,13 @@ body{
 
 /*************Navegação****************/
 .nav-list{
-    background: linear-gradient(rgba(139, 138, 138, 0.671),rgb(241, 236, 236));
+    background: rgb(166, 199, 171);
+    box-shadow: 10px  8px 5px rgba(0, 0, 0, 0.055);
     display: inline-block;
     flex-direction: column;
-    height: 100%;
+    margin-top: 0.5em;
     position: fixed;
+    border-radius: 20px;
     
     
 }
@@ -189,13 +191,17 @@ body{
 .navegação-menu-mobile{
     background: linear-gradient(rgba(139, 138, 138, 0.671),rgb(241, 236, 236));
     height: 0;
-    width: 36vh;
+    width: 45vh;
     display: flex;
     justify-content: start;
     font-family: Inter-Regular;
     visibility: hidden;
     transition: 0.6s;
     overflow: hidden;
+    background: rgb(166, 199, 171);
+    box-shadow: 10px  8px 5px rgba(0, 0, 0, 0.055);
+    border-radius: 15px;
+    position: fixed;
     
 }
 .navegação-menu-mobile a{
@@ -210,7 +216,7 @@ body{
     align-items: center;
     margin: 2em;
     padding: 8px;
-    box-shadow: 1px 4px rgb(0, 0, 0);
+    box-shadow: 1px 4px rgb(255, 255, 255);
     border-radius: 10px;
     
 }
@@ -366,6 +372,7 @@ body{
      }
     .cabeçalho__container .navegação-menu-mobile{
     display: flex;
+   
 }
 .navegação-menu-mobile.abrir{
     visibility: visible;
@@ -374,6 +381,10 @@ body{
 .nav-list-menu-mobile.abrir{
     visibility: visible;
 
+}
+.paragrafos-cabeçalho{
+    text-align: start;
+    font-size: 12px;
 }
 
 
