--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     src: url(fonte/Inter-SemiBold.ttf);
 }
 body{
-    background-color: rgba(138, 168, 124, 0.445);
+    background: linear-gradient(rgba(142, 163, 132, 0.445), rgb(186, 207, 175));
 }
 /********container cabeçalho********/
 .cabeçalho__container{
@@ -19,6 +19,7 @@ body{
     justify-content: start;
     background: linear-gradient(rgb(241, 236, 236), rgba(139, 138, 138, 0.671));
     margin: auto;
+    box-shadow: 10px  8px 5px rgba(10, 156, 71, 0.103);
     
 }
 .cabeçalho-1-1{
@@ -38,10 +39,11 @@ body{
 
 /*************Navegação****************/
 .nav-list{
-    background: rgb(166, 199, 171);
-    box-shadow: 10px  8px 5px rgba(0, 0, 0, 0.055);
+    background: rgb(156, 199, 162);
+    box-shadow: 10px  8px 5px rgba(0, 0, 0, 0.199);
     display: inline-block;
     flex-direction: column;
+    margin-left: 10px;
     margin-top: 0.5em;
     position: fixed;
     border-radius: 20px;
