implementando outros projetos

--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: Inter-Regular;
-    src: url(fonte/Inter-Regular.ttf);
+    src: url(../fonte/Inter-Regular.ttf);
 }
 body{
     font-family: Inter-Regular;
