--- a/estilos/login.css
+++ b/estilos/login.css
@@ -20,7 +20,7 @@ body{
 }
 h1{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 35px;
 
 }
 main{
@@ -30,10 +30,9 @@ main{
  
 }
 form{
-   
     box-shadow: 10px  8px 5px rgba(0, 0, 0, 0.082);
     border-radius: 10px;
-    margin: px;
+    margin-top: 5%;
     padding: 60px;
     font-size: 20px;
     
@@ -67,6 +66,7 @@ input:focus{
 
 }
 .botão-salvar-login button{
+    margin-top: 5%;
     padding: 10px 35px;
     font-size: 20px;
     font-family: Roboto;
@@ -86,4 +86,12 @@ input:focus{
     color: white;
 }
 
+/******ESTILIZAÇÃO DA NAVEGAÇÃO DO MOBILE****/
+@media screen and (max-width: 1000px) {
 
+    .botão-salvar-login button{
+        margin-top: 35%;}
+    
+    
+
+}
