--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -9,6 +9,20 @@
 body{
     font-family: Inter-Regular;
 }
+/*Paragrafo cabeçalho*/
+.paragrafos-cabeçalho{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+.paragrafos-cabeçalho input{
+    background-color: transparent;
+    border: transparent;
+    font-size: 16px;
+    color: #1c7a0d;
+    font-weight: bold;
+}
 /*Nome Cadastro*/
 h1, h2{
     text-align: center;
