--- a/estilos/primeiroacesso.css
+++ b/estilos/primeiroacesso.css
@@ -25,7 +25,19 @@ body{
     margin: 5em;
 
 }
-
+/*Comentário*/
+.inicial-conteudo-prossiga{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-family: Roboto;
+    margin: 0;
+}
+.inicial-conteudo-prossiga strong{
+    font-weight: bold;
+    color: rgb(6, 109, 29);
+    
+}
 /*Botões*/
 .principal__container button{
     background-color: #000000;
@@ -55,5 +67,9 @@ body{
     flex-direction: column;
     margin-bottom: 5.5em;
 }
-
-
+/*MOBILE*/
+@media screen and (max-width: 1000px) {
+.inicial-conteudo-prossiga{
+    margin: auto 10% auto 15%;
+}
+}
