--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -213,6 +213,7 @@ div, select{
 
 /********Configurações Mobile****/
 @media screen and (max-width: 1000px) {
+    
     main, .pesos__container{
         justify-content: center;
         text-align: center;
@@ -220,6 +221,22 @@ div, select{
         margin-right: 2%;
 
     }
+    .cabeçalho-imagem img{
+        width: 80px;
+    }
+    .paragrafos-cabeçalho{
+        flex-direction: column;
+        align-items: start;
+        margin: auto;
+        font-size: 12px;
+        
+    }
+    .paragrafos-cabeçalho input{
+       margin: -8px;
+       font-size: 12px;
+      
+    }
+
     .filiação__container,.filiação_pai_container,.nome-filiação {
         display: none;
 
