--- a/estilos/primeiroacesso.css
+++ b/estilos/primeiroacesso.css
@@ -14,6 +14,25 @@ body{
     padding:0px;
     
 }
+header{
+    margin: 20px 10px;
+}
+header nav a{
+    font-family: Roboto;
+    text-decoration: none;
+    border: 1px solid rgb(20, 95, 39);
+    background-color: rgb(16, 117, 42);
+    border-radius: 10px;
+    padding: 8px;
+    color: white;
+}
+.navegação-sobre a:hover{
+    color: #000000;
+    font-weight: bold;
+    border: 1px solid rgb(253, 255, 254);
+    background-color: rgb(255, 255, 255);
+
+}
 /*Logo*/
 .principal__container{
     display: flex;
@@ -67,6 +86,7 @@ body{
     flex-direction: column;
     margin-bottom: 5.5em;
 }
+
 /*MOBILE*/
 @media screen and (max-width: 1000px) {
 .inicial-conteudo-prossiga{
