--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -336,7 +336,7 @@ body{
     height: 30px;
     border: transparent;
     background-color: transparent;
-    margin: 2em 10px 0 0;
+    margin: 2em 10px 20px 0;
     
  }
                                                           
