--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -47,8 +47,7 @@ body{
     margin-top: 0.5em;
     position: fixed;
     border-radius: 20px;
-    
-    
+
 }
 .nav-list a{
     text-decoration: none;
@@ -336,7 +335,8 @@ body{
     height: 30px;
     border: transparent;
     background-color: transparent;
-    margin: 2em 10px 20px 0;
+    margin: 8%;
+    padding-left: 15%;
     
  }
                                                           
