--- a/estilos/resumo.css
+++ b/estilos/resumo.css
@@ -90,7 +90,7 @@ body{
     background-color: rgba(219, 233, 221, 0.856);
     border-radius: 10px;
     font-size: 18px;
-    margin: 5px auto;
+    margin: 5px 19px;
     padding: 50px;
 }
 /*Resumo animais*/
@@ -137,11 +137,13 @@ body{
      
 }
 .sessão-direito__container{
-    margin-left: 7%;
+    padding: auto;
+    margin-left: 6%;
 }
 /*RESUMO Animal*/
 .resumo-animais__container div input{
     background-color: rgba(192, 207, 219, 0.342);
+    text-align: center;
 }
 
 .resumo-animais__container h3{
@@ -157,15 +159,12 @@ body{
     width: 100px;
 }
 /*ORIGEM*/
-.inputs_origens input{
-    background-color: rgba(194, 199, 202, 0.384);
-    text-align: center;
+.inputs_origens__container{
+    background-color: transparent;
+
 }
-.inputs_origens-valor{
-    background-color: rgba(139, 153, 135, 0.384);
-    text-align: center;
-    font-size: 15px;
-}
+
+
 #valor-animal input{
     background-color: rgba(164, 192, 156, 0.384);
     text-align: center;
